--- a/view/login.html
+++ b/view/login.html
@@ -4,8 +4,8 @@
     </head>
     <body>
         <form method="POST">
-            login: <input name="username" value='luizg'><br>
-            senha: <input name="pw" type="password" value='1509'><br>
+            login: <input name="username" value=''><br>
+            senha: <input name="pw" type="password" value=''><br>
             <input name="login" type='submit' value='Entrar'>
         </form>
     </body>
