--- a/view/style/login.css
+++ b/view/style/login.css
@@ -1,7 +1,3 @@
-.login-box {
-    vertical-align: auto;
-    margin: auto;
-    background-color: blueviolet;
-    max-width: 30%;
-    padding: 1%;
+body {
+    background-image: url('https://images.unsplash.com/photo-1541140134513-85a161dc4a00?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
 }
