--- a/view/login.html
+++ b/view/login.html
@@ -1,24 +1,43 @@
 <html5>
     <head>
         <title>SSS Login</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="{{url_for('static', filename='style/login.css')}}">
+        <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css'>
+        <link rel='stylesheet' href='{{url_for('static', filename='style/login.css')}}'>
     </head>
-    <body class="h-100 d-flex align-items-center justify-content-center">
-            <div id="loginBox" class="bg-light bg-gradient container justify-content-center form-group mt-5 mb-3 border rounded shadow-lg">
-                <div id="loginHeader">
-                    <h1 class="display-3 monospace">
+    <body class='h-100 w-100 d-flex align-items-center container justify-content-center'>
+            <div id='LoginBox' class='bg-light bg-gradient justify-content-center' style="border-radius: 12px; width: 100%;">
+
+                <div id='loginHeader' class='bg-dark text-white' style="border-top-left-radius: 12px; border-top-right-radius: 12px; position: relative; padding-bottom: 0.3em">
+                    <h1 id="EnterpriseName" class='h1 font-weight-light monospace text-center m-0' style="font-size: 2em;">
                         Enterprise Name
-                    </p>
-                    <h2 class="display-4 monospace">
-                        Login
-                    </span>
+                    </h1>
                 </div>
-                <form method="POST" class="mt-4">
-                    <input id="username" name="username" placeholder="username" class="form-control mb-2">
-                    <input id="pw" name="pw" type="password" placeholder="password" class="form-control mb-2">
-                    <input name="login" type='submit' class="btn btn-dark btn-block mb-2" value='Login'>
-                </form>
+                <div id='LoginForm' class="m-5 pb-5">
+                    <form method='POST' class="mb-2">
+                        <div id="UserGroup" class="input-group">
+                            <span id='user-ico' class="input-group-text mb-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+                                    <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"></path>
+                                </svg>
+                            </span>
+                            <input id='username' name='username' placeholder='username' class='form-control mb-2'>
+                        </div>
+                            <div id="passwordgroup" class="input-group">
+                                <span id='pass-ico' class="input-group-text mb-2">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-key-fill" viewBox="0 0 16 16">
+                                        <path d="M3.5 11.5a3.5 3.5 0 1 1 3.163-5H14L15.5 8 14 9.5l-1-1-1 1-1-1-1 1-1-1-1 1H6.663a3.5 3.5 0 0 1-3.163 2M2.5 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/>
+                                    </svg>
+                                </span>
+                                <input id='pw' name='pw' type='password' placeholder='password' class='form-control mb-2'>
+                            </div>
+                        <button name='login' type='submit' class='btn btn-dark btn-block p-0'>
+                            <span class="m-0" style="font-size: 1.5em;">
+                                Login
+                            </span>
+                        </button>
+                    </form>
+                </div>
+                </div>
             </div>
     </body>
 </html5>
