--- a/view/register_sale.html
+++ b/view/register_sale.html
@@ -32,49 +32,51 @@
         </ul>
     </nav>
 
-    <div id="saleFormContent" style="visibility: visible;">
-    <h1 id="TitleHead" class="fw-light display-5 mt-4 ml-5">Register Sale</h1>
-
-    <form id="saleForm" class="container align-items-center justify-content-center mt-5" method="post">
-        <!-- Fixed fields: User Registry and Item -->
-        <div id="form-header" class="container form-inline row justify-content-center mb-1">
-            <input hidden name="itemCounter" id="itemCounter" value="1">
-            <input type="text" name="costumerRegistry" id="costumerRegistry" palceholder="Costumer Registry" class="form-control col-sm mr-1" style="max-width: 10%" onchange="getCostumer()" required>
-            <input id="costumerName" placeholder="Costumer Name" class="form-control col-sm mr-1" style="max-width: 60%"required disabled>
-        </div>
-
-        <div id="items" class="form-inline container align-items-center justify-content-center border border-1 rounded p-1 mt-5 bg-white">
-            <div id="item1" class="form-row d-inline-flex row mb-1 mt-1">
-                    <label for="barcode1" display: block>EAN:</label>
-                    <input type="text" name="barcode1" id="barcode1" class="form-control mr-1" onchange= "getItem('1')" required>
-                    
-                    <input id="itemDescription1" placeholder="Item Description" class= "form-control mr-1" required disabled>
-
-                    <label for="quantity1" display: block>Quantity:</label>
-                    <input type="number" name="quantity1" id="quantity1" class="form-control mr-1" required disabled>
-                
-                    <label for="price1"display: block>Price:</label>
-                    <input type="number" name="price1" id="price1" class="form-control mr-1" required disabled>
-                    
-                    <button type="button" class="btn btn-danger form-control" onclick="removeItem(1)" > X </button>
-            </div>
-        <!-- Dynamic fields for additional items -->
-            <!-- JavaScript will add fields here 
+    <div id="saleFormContent" class="h-100 w-100 p-0 pb-2 container align-items-center justify-content-center mt-5 bg-white" style="border-top-left-radius: 12px; border-top-right-radius: 12px;">
         
-            -->
+        <div id='loginHeader' class='bg-dark text-white container align-items-center justify-content-center m-0' style="border-top-left-radius: 12px; border-top-right-radius: 12px; position: relative; padding-bottom: 0.3em">
+            <h1 id="TitleHead" class="h1 font-weight-light monospace text-center m-0">Register Sale</h1>
         </div>
-        <div id="buttonsDiv" class="container form-inline padding receipt_container align-items-center justify-content-center mt-1 mb-1">
-            <button type="button" class="btn btn-primary mr-1" onclick="addItem()">Add Item</button>
-            <button type="button" id="submitBtn" class="btn btn-success mr-1" onclick="validFields()">Submit</button>
-            <button type="button" id="printBtn" class="btn mr-1" id="printSale" onclick="printReceipt()">Print</button>
-            <button type="reset" id="resetBtn" class="btn btn-warning mr-1" onclick="cleanForm()">Reset</button>
-        </div>
-    </form>
+        <form id="saleForm" class="container align-items-center justify-content-center mt-3" method="post">
+            <!-- Fixed fields: User Registry and Item -->
+            <div id="form-header" class="container form-inline row justify-content-center mb-1">
+                <input hidden name="itemCounter" id="itemCounter" value="1">
+                <input type="text" name="costumerRegistry" id="costumerRegistry" palceholder="Costumer Registry" class="form-control col-1 mr-1" onchange="getCostumer()" required>
+                <input id="costumerName" placeholder="Costumer Name" class="form-control col-sm mr-1" style="max-width: 60%"required disabled>
+                <button type="button" class="btn btn-primary mr-1" onclick="addItem()">Add Item</button>
+            </div>
+
+            <div id="items" class="form-inline container align-items-center justify-content-center border border-1 rounded p-1 my-2 bg-white">
+                <div id="item1" class="form-row d-inline-flex row my-1">
+                        <input type="text" name="barcode1" id="barcode1" placeholder="Barcode" class="form-control mr-1 col-sm-2" onchange="getItem('1')" required>
+                        <input id="itemDescription1" placeholder="Item Description" class="form-control mr-1 col-md" required disabled>
+                        <input type="number" name="quantity1" id="quantity1" placeholder="Quantity" class="form-control mr-1 col-sm-2" required disabled>
+                        <input type="number" name="price1" id="price1" placeholder="Price Ex. 5.99" class="form-control mr-1 col-sm-2" required disabled>
+                        <button type="button" class="btn btn-danger form-control" onclick="removeItem(1)" > X </button>
+                </div>
+            <!-- Dynamic fields for additional items -->
+                <!-- JavaScript will add fields here 
+            
+                -->
+            </div>
+            <div id="buttonsDiv" class="container center form-inline padding receipt_container align-items-center justify-content-center">
+                <button type="button" id="submitBtn" class="btn btn-success mr-1" onclick="validFields()">Submit</button>
+                <button type="reset" id="resetBtn" class="btn btn-warning" onclick="cleanForm()">Reset</button>
+            </div>
+        </form>
     </div>
-    <div id="receiptContainer" class="container" style="visibility: collapse;">
-        <div id="receipt" name="receipt" class="receipt_container bg-white">
+    <div id="receiptContainer" class="container p-1 border border-1 bg-white" style="visibility: collapse;">
+        <div id="receipt" name="receipt" class="receipt_container">
             <div class="header">
-                <h2>Receipt</h2>
+                <div id="title" class="row">
+                    <h2 class="col">Receipt</h2>
+                    <button type="button" id="printBtn" class="btn col-1" id="printSale" onclick="printReceipt()" style="position: relative; align-self: flex-end;">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-printer mt-1" viewBox="0 0 16 16">
+                            <path d="M2.5 8a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1"/>
+                            <path d="M5 1a2 2 0 0 0-2 2v2H2a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h1v1a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-1h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1V3a2 2 0 0 0-2-2zM4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H4zm1 5a2 2 0 0 0-2 2v1H2a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v-1a2 2 0 0 0-2-2zm7 2v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1"/>
+                        </svg>
+                    </button>
+                </div>
                 <div id="sale_info">
                     <p class="header_item">Sale Store: <span id="RsaleStore"></span></p>
                     <p class="header_item">Sale ID: <span id="RsaleId"></span></p>
