New Sales Receipt Status implemented
Deprecated setPrint Endpoint, Sales Class DBmodel, create sales DML.

Implemented close validation on ValidateFields before Register Sale.

Register Sale converted into closeReceipt

--- a/view/register_sale.html
+++ b/view/register_sale.html
@@ -52,7 +52,8 @@
                         <input id="itemDescription1" placeholder="Item Description" class="form-control mr-1 col-md" required disabled>
                         <input type="number" name="quantity1" id="quantity1" placeholder="Quantity" class="form-control mr-1 col-sm-2" required disabled>
                         <input type="number" name="price1" id="price1" placeholder="Price Ex. 5.99" class="form-control mr-1 col-sm-2" required disabled>
-                        <button type="button" name="lock1" id="lock1" class="btn btn-primary form-control pt-2 mr-1" onclick="LockUnlockItem(1)">
+                        
+                        <button type="button" name="lock1" id="lock1" value="unlocked" class="btn btn-primary form-control pt-2 mr-1" onclick="LockUnlockItem(1)">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
                                 <path id='icoLock1' value="unlocked" d="M11 1a2 2 0 0 0-2 2v4a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V9a2 2 0 0 1 2-2h5V3a3 3 0 0 1 6 0v4a.5.5 0 0 1-1 0V3a2 2 0 0 0-2-2"/>
                             </svg>
