--- a/view/style/register_sale.css
+++ b/view/style/register_sale.css
@@ -1,3 +1,22 @@
+@media (min-width: 800px) {
+    [id^='itemDescription'] {min-width: 411px !important;}
+    #submitBtn, #resetBtn{min-width:200px;text-transform:uppercase;font-weight:600;}
+}
+    
+#saleFormContent{
+    border-radius: 20px;
+    border: 1px solid #fff;
+    box-shadow: 0px 0px 10px 0px #ccc;
+    padding: 3px !important;
+}
+    
+#loginHeader{
+    border-top-left-radius: 12px; 
+    border-top-right-radius: 12px; 
+    position: relative; 
+    padding-bottom: 0.3em;	
+}
+
 .nav-link-i {
     color: #fff;
 }
@@ -34,4 +53,4 @@ th, td {
     }
 th {
     background-color: #f2f2f2;
-    }
+    }    
