Sign In Functionality and Log In errors handling
Sing In implemented, the user will provide your informations to create a new user for itself, this new users is group 0, with no permissions, and will be validated by application administration that will set a group that allows user to login and use app with group permissions

Now, some messages return on screen on failure of login.

New Hello message on sucessfull login inside homepage

--- a/view/homepage.html
+++ b/view/homepage.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{url_for('static', filename='style/register_sale.css')}}">
 </head>
-<body >
+<body>
     <!-- Navbar Content -->
     <nav class="navbar navbar-dark bg-dark bg-gradient">
         <a class="navbar-brand" href="{{ url_for('home.homepage') }}">Entreprise Name</a>
@@ -31,6 +31,10 @@
             </li>
         </ul>
     </nav>
+
+    <h1 class="text-dark ml-2">
+        Welcome, {{session['firstname']}}
+    </h1>
 
     <!-- Bootstrap JS and dependencies (jQuery and Popper.js) -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
